--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id='root'></div>
-        <script src="/output.js"></script>
+        <script src="./dash_table/demo.js"></script>
     </body>
 </html>
