--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div id='root'></div>
-        <script src='https://unpkg.com/react@16.8.6/umd/react.production.min.js'></script>
-        <script src='https://unpkg.com/react-dom@16.8.6/umd/react-dom.production.min.js'></script>
+        <script src='https://unpkg.com/react@16.8.6/umd/react.development.js'></script>
+        <script src='https://unpkg.com/react-dom@16.8.6/umd/react-dom.development.js'></script>
 
         <script src="./demo.js"></script>
     </body>
